--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CSS</title>
 </head>
 <body>
-    <h1 class="texto">Textos no CSS</h1>
+    <h1 class="texto">Branchs</h1>
 
     <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, voluptas pariatur! Magni laborum ullam amet totam mollitia facilis qui ratione eveniet nisi reiciendis aperiam laudantium, repellat natus quibusdam rem corrupti!</p>
 </body>
